--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 						</thead>
 						<tbody>
 							<tr>
+								<td>01-Feb-2021</td>
+								<td>Added Z-Wave LR</td>
+							</tr>
+							<tr>
 								<td>19-Jan-2021</td>
 								<td>Version 1.0</td>
 							</tr>
@@ -2060,8 +2064,9 @@
 					</section>
 					<section> <h4> <img src="images/zigbeeLogo.png"> </h4>
 						<ul>
-							<li>ISM frequency: 2,4 GHz</li>
+							<li>SRD/ISM frequency: 2,4 GHz + 868 MHz in Europe, 915 MHz in the USA</li>
 							<li>Self-organizing mesh network</li>
+							<li>Several hundreds of devices on a single network</li>
 							<li>Device types: Coordinator, Router, End Device</li>
 							<li>Data rate: 250 kb/s</li>
 							<li>Range: 300 m line of sight, 75 to 100 m indoors</li>
@@ -2071,13 +2076,22 @@
 					</section>
 					<section> <h4> <img src="images/zwaveLogo.png"> </h4>
 						<ul>
-							<li>SRD/ISM frquencies: 868 MHz in Europe, 915 MHz in the USA</li>
+							<li>SRD/ISM frquencies: 868 MHz in Europe, 915 MHz in the USA (not on Wi-Fi/Bluetooth frequencies)</li>
 							<li>Mesh network</li>
+							<li>Up to 232 devices on a single network</li>
 							<li>Data rate: up to 100 kb/s</li>
 							<li>Range: 100 m line of sight</li>
 							<li>Low energy consumption</li>
 						</ul>
 						<div class="pbverysmall">Source: <a href="https://www.z-wave.com/" title="Z-Wave" target="_blank">Z-Wave</a></div>
+					</section>
+					<section>
+						<p class="pbcenter">Z-Wave Long Range</p>
+						<ul>
+							<li>Announced in Dec-2020</li>
+							<li>Should supports distances of up to several miles</li>
+							<li>Should support up to 4000 nodes on a single network</li>
+						</ul>
 					</section>
 					<section> <h4>Proprietary protocols</h4>
 						<ul>
