--- a/index.html
+++ b/index.html
@@ -2064,7 +2064,7 @@
 					</section>
 					<section> <h4> <img src="images/zigbeeLogo.png"> </h4>
 						<ul>
-							<li>SRD/ISM frequency: 2,4 GHz + 868 MHz in Europe, 915 MHz in the USA</li>
+							<li>SRD/ISM frequency: 2,4 GHz and 868 MHz in Europe, 915 MHz in the USA</li>
 							<li>Self-organizing mesh network</li>
 							<li>Several hundreds of devices on a single network</li>
 							<li>Device types: Coordinator, Router, End Device</li>
@@ -2076,7 +2076,7 @@
 					</section>
 					<section> <h4> <img src="images/zwaveLogo.png"> </h4>
 						<ul>
-							<li>SRD/ISM frquencies: 868 MHz in Europe, 915 MHz in the USA (not on Wi-Fi/Bluetooth frequencies)</li>
+							<li>SRD/ISM frequencies: 868 MHz in Europe, 915 MHz in the USA (not on Wi-Fi/Bluetooth frequencies)</li>
 							<li>Mesh network</li>
 							<li>Up to 232 devices on a single network</li>
 							<li>Data rate: up to 100 kb/s</li>
