Replace some SVG by PNG

--- a/index.html
+++ b/index.html
@@ -213,20 +213,20 @@
 					<section id="introduction-1"> <h3>Some history</h3>
 					</section>
 					<section> <h4>Before the '90s</h4>
-						<img src="images/scada.svg">
+						<img src="images/scada.png">
 						<p class="pbcenter">SCADA (Supervisory Control And Data Acquisition)</p>
 						<div class="pbverysmall">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></div>
 						<div class="pbverysmall">Icons from  <a href="https://material.io/resources/icons/?style=baseline" target="_blank">material.io</a></div>
 					</section>
 					<section> <h4>In the '90s</h4>
-						<img src="images/m2m.svg" height="400">
+						<img src="images/m2m.png" height="400">
 						<p class="pbcenter">M2M (Machine to Machine)</br>
 						LBS (Location Based Services)</p>
 						<div class="pbverysmall">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a>, <a href="https://www.flaticon.com/authors/photo3idea-studio" target="_blank">photo3idea_studio</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></div>
 						<div class="pbverysmall">Icons from  <a href="https://material.io/resources/icons/?style=baseline" target="_blank">material.io</a></div>
 					</section>
 					<section> <h4>In the '00s</h4>
-						<img src="images/iot.svg">
+						<img src="images/iot.png">
 						<p class="pbcenter">IoT (Internet of Things)</p>
 						<div class="pbverysmall">Icons made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik" target="_blank">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon" target="_blank">www.flaticon.com</a></div>
 						<div class="pbverysmall">Icons from  <a href="https://material.io/resources/icons/?style=baseline" target="_blank">material.io</a></div>
