Modify first page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section> <h1>IoT and</br> Connected Objects</h1>
-					<h4>Pascal Bodin</h4>
+				<section> <h1>Connected Objects</h1>
+					<h5>Pascal Bodin</h5>
+					<img src="images/iot.png" height="350">
 					<div class="pbverysmall"><a href="https://pascalbod.github.io/iot-fr-presentation/" target="_blank">Version française</a></div>
 				</section>
 				<section> <h2>Document history</h2>
@@ -49,6 +50,10 @@
 							</tr>
 						</thead>
 						<tbody>
+							<tr>
+								<td>13-Feb-2021</td>
+								<td>Modified title</td>
+							</tr>
 							<tr>
 								<td>01-Feb-2021</td>
 								<td>Added Z-Wave LR</td>
