Use a link for first image

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="slides">
 				<section> <h1>Connected Objects</h1>
 					<h5>Pascal Bodin</h5>
-					<img src="images/iot.png" height="350">
+					<img src="https://pascalbod.github.io/iot-en-presentation/images/iot.png" height="350">
 					<div class="pbverysmall"><a href="https://pascalbod.github.io/iot-fr-presentation/" target="_blank">Version française</a></div>
 				</section>
 				<section> <h2>Document history</h2>
