--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="icon" href="logoT-32.png">
+		<link rel="icon" href="favicon.ico">
 
-		<title>IoT</title>
+		<title>Connected objects</title>
 
 		<link rel="stylesheet" href="dist/reset.css">
 		<link rel="stylesheet" href="dist/reveal.css">
