Add links to positions

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="slides">
 				<section> <h1>Connected Objects</h1>
 					<h5>Pascal Bodin</h5>
-					<img src="https://pascalbod.github.io/iot-en-presentation/images/iot.png" height="350">
+					<img src="images/iot.png" height="350">
 					<div class="pbverysmall"><a href="https://pascalbod.github.io/iot-fr-presentation/" target="_blank">Version française</a></div>
 				</section>
 				<section> <h2>Document history</h2>
@@ -165,8 +165,8 @@
 					</section>
 					<section> <h3>Who am I?</h3>
 						<ul>
-							<li>50% independent consultant - connected devices</li>
-							<li>50% senior software engineer, as employee</li>
+							<li><a href="https://systev.com" target="_blank">50% independent consultant - connected devices</a></li>
+							<li>50% senior software engineer &nbsp;<a href="https://www.orange.com/en" target="_blank"><img src="images/logo-orange.png" style="margin-bottom:0"></a></li>
 							<li>First connected devices project in 1990</li>
 						</ul>
 					</section>
