Add link to a BLE hands-on practice

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 						</thead>
 						<tbody>
 							<tr>
+								<td>21-Feb-2021</td>
+								<td>Added link to a BLE hands-on practice</td>
+							</tr>
+							<tr>
 								<td>13-Feb-2021</td>
 								<td>Modified title</td>
 							</tr>
@@ -158,6 +162,11 @@
 						</ul>
 					</section>
 					<section> <h3><a href="#/conclusion">Conclusion</a></h3>
+					</section>
+					<section> <h3>Hands-on practice</h3>
+						<ul>
+							<li><a href="#/hopBluetoothRuuvi">Receiving and decoding advertisement data transmitted by a Ruuvi tag</a></li>
+						</ul>
 					</section>
 				</section>
 				<section>
@@ -2066,6 +2075,23 @@
 							</li>
 						</ul>
 						<div class="pbverysmall">Source: <a href="https://www.bluetooth.com/" title="Bluetooth SIG" target="_blank">Bluetooth SIG</a></div>
+					</section>
+					<section id="hopBluetoothRuuvi"> <h4>Bluetooth hands-on practice</h4>
+						<p><a href="https://github.com/PascalBod/ESPIDFRuuviTag" target="_blank">Receiving and decoding advertisement data transmitted by a Ruuvi tag</a></p>
+						<p>Parts:</p>
+						<img src="images/ruuvitag-medium.png" height="100">
+						<img src="images/ESP32-DevKitC.png" height="120">
+						<ul>
+							<li>A <a href="https://ruuvi.com/ruuvitag-specs/" target="_blank">Ruuvi tag</a> - an open-source sensor node:
+								<ul>
+									<li>Humidity + pressure + temperature sensor</li>
+									<li>Accelerometer</li>
+									<li>Bluetooth Low Energy</li>
+								</ul>
+							</li>
+							<li>An <a href="https://www.espressif.com/en/products/devkits/esp32-devkitc/overview" target="_blank">ESP32-DevKitC</a> - 
+								a development board based on the ESP32, a Wi-Fi + Bluetooth microcontroller</li>
+						</ul>
 					</section>
 					<section> <h4> <img src="images/zigbeeLogo.png"> </h4>
 						<ul>
