--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<tbody>
 							<tr>
 								<td>21-Feb-2021</td>
-								<td>Added link to a BLE hands-on practice</td>
+								<td>Added link to a BLE hands-on lab</td>
 							</tr>
 							<tr>
 								<td>13-Feb-2021</td>
@@ -163,9 +163,9 @@
 					</section>
 					<section> <h3><a href="#/conclusion">Conclusion</a></h3>
 					</section>
-					<section> <h3>Hands-on practice</h3>
+					<section> <h3>Hands-on labs</h3>
 						<ul>
-							<li><a href="#/hopBluetoothRuuvi">Receiving and decoding advertisement data transmitted by a Ruuvi tag</a></li>
+							<li><a href="#/hoBluetoothRuuvi">Receiving and decoding advertisement data transmitted by a Ruuvi tag</a></li>
 						</ul>
 					</section>
 				</section>
@@ -2076,7 +2076,7 @@
 						</ul>
 						<div class="pbverysmall">Source: <a href="https://www.bluetooth.com/" title="Bluetooth SIG" target="_blank">Bluetooth SIG</a></div>
 					</section>
-					<section id="hopBluetoothRuuvi"> <h4>Bluetooth hands-on practice</h4>
+					<section id="hoBluetoothRuuvi"> <h4>Bluetooth hands-on lab</h4>
 						<p><a href="https://github.com/PascalBod/ESPIDFRuuviTag" target="_blank">Receiving and decoding advertisement data transmitted by a Ruuvi tag</a></p>
 						<p>Parts:</p>
 						<img src="images/ruuvitag-medium.png" height="100">
