--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 						</tbody>
 					</table>
 				</section>
-				<section> <h2>License</h2>
-					<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
-						<img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
-						<br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>
+				<section>
+						<p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
+							Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></p>
+						<p><iframe src="https://github.com/sponsors/PascalBod/button" title="Sponsor PascalBod" height="35" width="116" style="border: 0;"></iframe></p>
 				</section>
 				<section><h2>Credits</h2>
 					<ul>
