Comment and align sponsor button

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<section>
 						<p>This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
 							Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></p>
-						<p><iframe src="https://github.com/sponsors/PascalBod/button" title="Sponsor PascalBod" height="35" width="116" style="border: 0;"></iframe></p>
+						<p>You can sponsor it: <iframe src="https://github.com/sponsors/PascalBod/button" title="Sponsor PascalBod" height="35" width="116" style="border: 0; vertical-align: bottom;"></iframe></p>
 				</section>
 				<section><h2>Credits</h2>
 					<ul>
