Add how to navigate

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 						</thead>
 						<tbody>
 							<tr>
+								<td>05-Mar-2021</td>
+								<td>Added how to navigate</td>
+							</tr>
+							<tr>
 								<td>24-Feb-2021</td>
 								<td>Added links to STM32 and ESP32 hands-on labs</td>
 							</tr>
@@ -85,6 +89,13 @@
 						<li><a href="https://material.io/resources/icons/?style=baseline" target="_blank">material.io</a></li>
 						<li><a href="https://matomo.org/" target="_blank">Matomo</a></li>
 					</ul>
+				</section>
+				<section><h2>How to navigate</h2>
+					<ul>
+						<li>Use the right and left arrows (in bottom right corner) to navigate from one topic to another</li>
+						<li>In a topic, use the top and down arrows</li>
+					</ul>
+					<img src="images/navigation.png" height="350">
 				</section>
 				<section> 
 					<section> <h2>Contents</h2>
