--- a/index.html
+++ b/index.html
@@ -200,8 +200,20 @@
 					</section>
 					<section> <h3>Who am I?</h3>
 						<ul>
-							<li><a href="https://systev.com" target="_blank">50% independent consultant - connected devices</a></li>
-							<li>50% senior software engineer &nbsp;<a href="https://www.orange.com/en" target="_blank"><img src="images/logo-orange.png" style="margin-bottom:0"></a></li>
+							<li><a href="https://systev.com" target="_blank">
+								half-time independent consultant - connected devices</a> <br/>
+								<a href="https://www.ackl.io" target="_blank">
+									<img src="images/logo-acklio.png"></a>
+								&nbsp;
+								<a href="https://www.connectedcycle.com" target="_blank">
+									<img src="images/logo-connectedCycle.png"></a>
+							</li>
+							<li>half-time senior software engineer <br/>
+								<a href="https://www.orange.com/en" target="_blank">
+									<img src="images/logo-orange.png" style="vertical-align: middle;">
+								</a>
+								&nbsp;-&nbsp;appointed <em>Orange Expert</em>
+							</li>
 							<li>First connected devices project in 1990</li>
 						</ul>
 					</section>
