--- a/index.html
+++ b/index.html
@@ -201,14 +201,14 @@
 					<section> <h3>Who am I?</h3>
 						<ul>
 							<li><a href="https://systev.com" target="_blank">
-								half-time independent consultant - connected devices</a> <br/>
+								Half-time independent consultant - connected devices</a> <br/>
 								<a href="https://www.ackl.io" target="_blank">
 									<img src="images/logo-acklio.png"></a>
 								&nbsp;
 								<a href="https://www.connectedcycle.com" target="_blank">
 									<img src="images/logo-connectedCycle.png"></a>
 							</li>
-							<li>half-time senior software engineer <br/>
+							<li>Half-time senior software engineer <br/>
 								<a href="https://www.orange.com/en" target="_blank">
 									<img src="images/logo-orange.png" style="vertical-align: middle;">
 								</a>
