--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -1506,7 +1506,7 @@
 					</code></pre>
 				</section>
 				<section>
-					<p class="pbsmaller">A real example: handling the conncetion to a Wi-Fi AP for the ESP32:</p>
+					<p class="pbsmaller">A real example: handling the connection to a Wi-Fi AP for the ESP32:</p>
 					<img src="images/connect_wifi.png" height="400">
 					<p class="pbsmaller">Several transitions not drawn, for simplicity sake.</p>
 					<div class="pbverysmall">Source: <a href="https://github.com/PascalBod/ESPIDFUdpSender" 
