add Standardization section

--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -1114,7 +1114,8 @@
                             target="_blank">LiteOS</a>,
                         <a href="https://www.lynx.com/products/lynxos-posix-real-time-operating-system-rtos"
                             title="LynxOS" target="_blank">LynxOS</a>,
-                        <a href="https://www.zerynth.com/zos/" title="Zerynth OS" target="_blank">Zerynth OS</a>
+                        <a href="https://www.zerynth.com/zos/" title="Zerynth OS" target="_blank">Zerynth OS</a>,
+                        <a href="https://nuttx.apache.org/" title="NuttX" target="_blank">NuttX</a>
                     </div>
                 </section>
                 <section>
@@ -1145,10 +1146,22 @@
 				<section>
                     <p>(Very) important difference with an OS: no virtual memory.</p>
 					<ul>
-                        <li>A ask may crash another task</li>
+                        <li>A task may crash another task</li>
 						<li>A task may crash the whole application</li>
 					</ul>
 				</section>
+                <section>
+                    <p>
+                        Provided by the RTOS, or provided as additional services, and (often) required by a connected device:
+                    </p>
+                    <ul>
+                        <li>Connectivity</li>
+                        <li>Security</li>
+                        <li>Storage</li>
+                        <li>Device management</li>
+                        <li>Machine learning</li>
+                    </ul>
+                </section>
                 <section>
                     <h5>Bare metal</h5>
                     <ul>
