add links to platforms

--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 					</thead>
 					<tbody>
 						<tr>
+							<td>18-Dec-2021</td>
+							<td>Links to platforms</td>
+						</tr>
+						<tr>
 							<td>11-Dec-2021</td>
 							<td>Standardization section</td>
 						</tr>
@@ -2037,9 +2041,148 @@
 					<p class="pbcenter">Strangely enough, many platforms are available...</p>
 				</section>
 				<section>
-					<img src="images/platforms1.png">
-					<div class="pbverysmall">Source: <a href="https://systev.com/a-list-of-iot-platforms/"
-							title="Systev" target="_blank">Systev</a></div>
+					<div class="pbcolumns">
+						<div class="pbsmaller">
+							<a href="https://www.afero.io/" target="_blank">Afero</a><br>
+							<a href="https://aggregate.digital/" target="_blank">AggreGate</a><br>
+							<a href="https://www.sierrawireless.com/products-and-solutions/iot-connectivity/iot-cloud-platform/"
+								target="_blank">AirVantage</a><br>
+							<a href="https://akenza.io/" target="_blank">Akenza</a><br>
+							<a href="https://www.altair.com/smartworks/" target="_blank">Altair SmartWorks</a><br>
+							<a href="https://docs.arduino.cc/cloud/iot-cloud" target="_blank">Arduino IoT Cloud</a><br>
+							<a href="https://www.arkessa.com/" target="_blank">Arkessa</a><br>
+							<a href="https://asksensors.com/" target="_blank">AskSensors</a><br>
+							<a href="https://atmosphereiot.com/" target="blank">Atmosphere</a><br>
+							<a href="https://www.avimesa.com/" target="_blank">Avimesa.Live</a>
+							<a href="https://aws.amazon.com/iot/" target="_blank">AWS IoT</a><br>
+							<a href="https://www.aylanetworks.com/" target="_blank">Ayla Networks</a><br>
+							<a href="https://www.balena.io/cloud" target="_blank">balenaCloud</a><br>
+							<a href="https://beebotte.com/" target="_blank">Beebotte</a><br>
+							<a href="https://blynk.io/" target="_blank">Blynk</a><br>
+							<a href="https://www.boltiot.com/" target="_blank">Bolt</a><br>
+							<a href="https://bosch-iot-suite.com/" target="_blank">Bosch IoT Suite</a><br>
+						</div>
+						<div class="pbsmaller">
+							<a href="https://www.busit.com/en/product-2/" target="_blank">Busi AEP</a><br>
+							<a href="https://banyanhills.com/canopy-iot-platform/" target="_blank">Canopy</a><br>
+							<a href="https://developers.mydevices.com/cayenne/features/" target="_blank">Cayenne</a><br>
+							<a href="https://www.clovity.com/csensornet/" target="_blank">CSensorNet</a><br>
+							<a href="https://www.rti.com/products" target="_blank">Connext</a><br>
+							<a href="https://www.connio.com/industrial-iot-industrial-iot-platform.html"
+								target="_blank">CONNIO</a><br>
+							<a href="https://www.softwareag.cloud/site/product/cumulocity-iot.html#/"
+								target="_blank">Cumulocity IoT</a><br>
+							<a href="https://www.datagekko.com/" target="_blank">DATAGEKKO</a><br>
+							<a href="https://davra.com/iot-platform/" target="_blank">Davra IoT Platform</a><br>
+							<a href="https://www.devicepilot.com/" target="_blank">DevicePilot</a><br>
+							<a href="https://www.digi.com/products/iot-software-services/digi-remote-manager"
+								target="_blank">Digi Remote Manager</a><br>
+							<a href="https://dweet.io/" target="_blank">Dweet</a><br>
+							<a href="https://www.edgeiq.ai/platform" target="_blank">EdgeIQ</a><br>
+							<a href="https://www.embever.com/" target="_blank">Embever</a><br>
+							<a href="https://www.emnify.com/iot-cloud-integration" target="_blank">EMnify</a><br>
+							<a href="https://freeboard.io/" target="_blank">Freeboard</a>
+						</div>
+						<div class="pbsmaller">
+							<a href="https://www.gaonic.com/" target="_blank">Gaonic</a><br>
+							<a href="https://www.go-iot.io/" target="_blank">Go-IoT</a><br>
+							<a href="https://docs.golioth.io/" target="_blank">Golioth</a><br>
+							<a href="https://cloud.google.com/iot-core" target="_blank">Google Cloud IoT Core</a><br>
+							<a href="https://iotfy.com/platform" target="_blank">iACE IoT Platform</a><br>
+							<a href="https://ifttt.com/about" target="_blank">IFTTT</a><br>
+							<a href="https://www.globeranger.com/solutions/" target="_blank">iMotion</a><br>
+							<a href="https://www.nokia.com/networks/solutions/impact-iot-platform/"
+								target="_blank">IMPACT</a><br>
+							<a href="https://www.initialstate.com/" target="_blank">Initial State</a><br>
+							<a href="https://www.inteliments.com/en/products-and-services/iot-data-platform"
+								target="_blank">InteliGlue</a><br>
+							<a href="https://io.adafruit.com/" target="_blank">IO</a><br>
+							<a href="https://infiswift.tech/iot-ai-fabric/" target="_blank">IoT + AI Fabric</a><br>
+							<a href="https://iotguru.cloud/" target="_blank">IoT GURU</a><br>
+							<a href="https://www.hologram.io/" target="_blank">Hologram</a><br>
+							<a href="https://www.kaaiot.com/" target="_blank">Kaa</a><br>
+							<a href="https://en.kii.com/platform/" target="_blank">Kii</a>
+						</div>
+					</div>
+				</section>
+				<section>
+					<div class="pbcolumns">
+						<div class="pbsmaller">
+							<a href="https://litmus.io/litmus-edge-manager/" target="_blank">Litmus Edge Manager</a><br>
+							<a href="https://www.losant.com/iot-platform" target="_blank">Losant</a><br>
+							<a href="https://www.hitachi.com/products/it/lumada/global/en/about/"
+								target="_blank">Lumada</a><br>
+							<a href="https://luner.io/" target="_blank">Luner</a><br>
+							<a href="https://www.m2mi.com/index.php/m2m-iot-application" target="_blank">M2M
+								Intelligence</a><br>
+							<a href="https://macchina.io/index.html" target="_blank">Macchina.io</a><br>
+							<a href="https://microtronics.com/en/platform/" target="_blank">Microtronics</a><br>
+							<a href="https://www.tinkermode.com/" target="_blank">MODE</a><br>
+							<a href="https://www.munic.io/" target="_blank">Munic</a><br>
+							<a href="https://www.exosite.com/murano-iot-platform" target="_blank">Murano</a><br>
+							<a href="https://mydevices.com/platform/" target="_blank">MyDevices</a><br>
+							<a href="https://www.aeris.com/neo/" target="_blank">Neo</a><br>
+							<a href="https://www.net4things.com/mobility/platform/" target="_blank">Net4Things</a><br>
+							<a href="https://www.netobjex.com/technology/" target="_blank">NetObjex</a><br>
+							<a href="https://niolabs.com/" target="_blank">Nio</a>
+						</div>
+						<div class="pbsmaller">
+							<a href="https://www.nexess-solutions.com/en/iot-platform/" target="_blank">NexCap</a><br>
+							<a href="https://www.sierrawireless.com/octave/" target="_blank">Octave</a><br>
+							<a href="https://otonomo.io/platform/" target="_blank">Otonomo</a><br>
+							<a href="https://pelion.com/" target="_blank">Pelion</a><br>
+							<a href="https://www.podgroup.com/" target="_blank">Pod</a><br>
+							<a href="https://www.pubnub.com/use-case/iot-device-control/" target="_blank">PubNub</a><br>
+							<a href="https://pycom.io/products/software/pybytes-3/" target="_blank">Pybytes</a><br>
+							<a href="https://reekoh.com/" target="_blank">Reekoh</a><br>
+							<a href="https://saymon.tech/" target="_blank">SAYMON</a><br>
+							<a href="https://signomix.com/#!en" target="_blank">SIGNOMIX</a><br>
+							<a href="https://www.wirelesslogic.com/iot-solutions/simpro/" target="_blank">SIMPro</a><br>
+							<a href="https://smart-ix.ai/" target="_blank">SMART.iX</a><br>
+							<a href="https://www.smartthings.com/" target="_blank">SmartThings</a><br>
+							<a href="https://thethings.io/" target="_blank">Thetings.iO</a><br>
+							<a href="https://www.thingsmobile.com/business" target="_blank">Things Mobile</a>
+						</div>
+						<div class="pbsmaller">
+							<a href="https://thingspeak.com/" target="_blank">ThingSpeak</a><br>
+							<a href="https://www.thingsquare.com/iot-platform/" target="_blank">Thingsquare</a><br>
+							<a href="https://www.u-blox.com/en/product/thingstream" target="_blank">Thingstream</a><br>
+							<a href="https://www.ptc.com/en/products/thingworx" target="_blank">ThingWorx</a><br>
+							<a href="https://www.electricimp.com/" target="_blank">Twilio Electric Imp</a><br>
+							<a href="https://www.twilio.com/iot/microvisor-iot-platform" target="_blank">Twilio
+								Microvisor</a><br>
+							<a href="https://unificationengine.com/" target="_blank">UnificationEngine</a><br>
+							<a href="https://ursaleo.com/" target="_blank">UrsaLeo</a><br>
+							<a href="https://internetofthings.ibmcloud.com/#/" target="_blank">Watson IoT
+								Platform</a><br>
+							<a href="https://wavely.io/" target="_blank">WAVELY</a><br>
+							<a href="https://www.waylay.io/" target="_blank">Waylay</a><br>
+							<a href="https://wolkabout.com/platform/#first" target="_blank">WolkAbout IoT
+								Platform</a><br>
+							<a href="https://yaler.net/" target="_blank">Yaler</a><br>
+							<a href="https://www.zipitwireless.com/" target="_blank">Zipit</a><br>
+							Etc.
+						</div>
+					</div>
+				</section>
+				<section>
+					<h4>Open source platforms</h4>
+					<div class="pbcolumns">
+						<div class="pbsmaller">
+							<a href="https://devicehive.com/" target="_blank">DeviceHive</a><br>
+							<a href="https://iot-dsa.org/" target="_blank">DSA</a><br>
+							<a href="https://iot.eclipse.org/" target="_blank">Eclipse IoT</a><br>
+							<a href="https://www.fiware.org/" target="_blank">FIWARE</a><br>
+							<a href="https://mainflux.com/cloud.html" target="_blank">Mainflux</a><br>
+							<a href="https://openmtc.org/index.html" target="_blank">OpenMTC</a><br>
+							<a href="https://openremote.io/" target="_blank">OpenRemote</a><br>
+							<a href="https://github.com/signomix/signomix" target="_blank">Signomix</a><br>
+							<a href="https://sitewhere.io/en/" target="_blank">SiteWhere</a><br>
+							<a href="https://thinger.io/" target="_blank">Thinger.io</a><br>
+							<a href="https://iot.mozilla.org/" target="_blank">WebThings</a><br>
+							Etc.
+						</div>
+					</div>
 				</section>
 				<section>
 					<p class="pbcenter">Pros:</p>
