--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 					</thead>
 					<tbody>
 						<tr>
+							<td>12-Feb-2022</td>
+							<td>Navigation hint</td>
+						</tr>
+						<tr>
 							<td>18-Dec-2021</td>
 							<td>Links to platforms</td>
 						</tr>
@@ -78,10 +82,6 @@
 						<tr>
 							<td>21-Feb-2021</td>
 							<td>Added link to a BLE hands-on lab</td>
-						</tr>
-						<tr>
-							<td>01-Feb-2021</td>
-							<td>Added Z-Wave LR</td>
 						</tr>
 						<tr>
 							<td>19-Jan-2021</td>
@@ -3173,6 +3173,7 @@
 	<script src="plugin/notes/notes.js"></script>
 	<script>
 		Reveal.initialize({
+			controlsTutorial: true,
 			hash: true,
 			plugins: [RevealMarkdown, RevealHighlight, RevealNotes],
 			slideNumber: true
