add a textual navigation hint

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<h1>Connected Objects</h1>
 				<h5>Pascal Bodin</h5>
 				<img src="images/iot.png" height="350">
-				<div class="pbverysmall"><a href="https://pascalbod.github.io/iot-fr-presentation/"
+				<div class="pbverysmall">To enter the presentation, click the arrow to the right - <a href="https://pascalbod.github.io/iot-fr-presentation/"
 						target="_blank">Version française</a></div>
 			</section>
 			<section>
