--- a/connectedDevice.html
+++ b/connectedDevice.html
@@ -1300,7 +1300,7 @@
 					<ul>
                         <li>Every interrupt may have a priority level (possibly configurable)</li>
 						<li>An interrupt of a higher priority interrupts an ISR servicing a lower priority interrupt</li>
-                        <li>An interrupt of lower or equal level does not interrupt the IRS; it is saved for later servicing</li>
+                        <li>An interrupt of lower or equal level does not interrupt the ISR; it is saved for later servicing</li>
 					</ul>
 				</section>
 				<section>
