--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
 					</thead>
 					<tbody>
 						<tr>
+							<td>02-Jan-2023</td>
+							<td>Floating-point arithmetic - Sigfox update</td>
+						</tr>
+						<tr>
 							<td>12-Feb-2022</td>
 							<td>Navigation hint</td>
 						</tr>
@@ -154,6 +158,7 @@
 						</li>
 						<li><a href="connectedDevice.html#/device-5" target="_blank">Peripherals</a></li>
 						<li><a href="connectedDevice.html#/device-6" target="_blank">Interfacing</a></li>
+						<li><a href="connectedDevice.html#/device-6b" target="_blank">Floating point arithmetic</a></li>
 						<li><a href="connectedDevice.html#/device-7" target="_blank">Software development</a></li>
 						<li><a href="connectedDevice.html#/device-8" target="_blank">Points to remember</a></li>
 					</ul>
@@ -1198,6 +1203,11 @@
 					<ul>
 						<li>Beware: presence map, not coverage map</li>
 					</ul>
+					<p>Note: Unabiz acquired Sigfox in Apr-2022. Unabiz is an IoT service provider and Sigfox Operator 
+						for Singapore and Taiwan</p>
+					<div class="pbverysmall">Source: <a
+						href="https://www.unabiz.com/unabiz-appointed-new-owner-sigfox-sa-sigfox-and-france-sas/"
+						title="Unabiz" target="_blank">Unabiz</a></div>
 				</section>
 				<section>
 					<h5><img src="images/lorawanLogo.png" height="100"></h5>
